--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "express": "node express.js"
   },
   "dependencies": {
-    "expo": "~47.0.12",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "expo": "48.0.1",
+    "expo-dev-client": "2.1.2",
+    "expo-image": "1.0.0-rc.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-web": "0.18.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.70.6",
-    "typescript": "^4.6.3"
+    "@babel/core": "7.21.0",
+    "@types/react": "18.0.28",
+    "express": "4.18.2",
+    "prettier": "2.8.4",
+    "typescript": "4.9.5"
   },
   "private": true
 }
